--- a/myWords/Base.lproj/Main_iPhone.storyboard
+++ b/myWords/Base.lproj/Main_iPhone.storyboard
@@ -63,7 +63,13 @@
                             <outlet property="delegate" destination="pGg-6v-bdr" id="Y6K-Cp-Qkv"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Palabras" id="tQt-TN-PWz"/>
+                    <navigationItem key="navigationItem" title="Palabras" id="tQt-TN-PWz">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="HO1-8s-aq2">
+                            <connections>
+                                <segue destination="4Pc-sN-qEq" kind="modal" id="aF5-Js-2ND"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6Cn-md-YlS" sceneMemberID="firstResponder"/>
             </objects>
